<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragment.NetworkFragment">

    <ImageView
        android:id="@+id/no_network_img"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/no_internet"
        android:src="@drawable/no_internet"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_msg"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:layout_below="@id/no_network_img"
        android:layout_marginBottom="32dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/network_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/custom_youtube_downloadable_button"
        android:padding="8dp"
        />

</RelativeLayout>